pagina de registrar añadida

--- a/src/app/pages/auth/auth.page.html
+++ b/src/app/pages/auth/auth.page.html
@@ -44,6 +44,10 @@
                     {{ errorMsg }}
                 </ion-text>
 
+                <div style="text-align:center; margin-top:14px;">
+                    <a routerLink="/auth/sing-up">¿No tienes cuenta? Regístrate</a>
+                </div>
+
         </form>
 
 </div>    
