--- a/src/app/pages/dashboard/dashboard.page.scss
+++ b/src/app/pages/dashboard/dashboard.page.scss
@@ -1,2 +1,14 @@
+:host, ion-content.dashboard-wrapper {
+	--padding-start: 0;
+	--padding-end: 0;
+}
+.layout {
+	display: flex;
+	height: 100%;
+}
+.main {
+	flex: 1;
+	padding: 16px;
+}
 h2 { font-weight: 600; margin-top: 12px; }
 p { opacity: 0.8; }
